# discord-data-package-analyzer

./: .gitignore  Cargo.toml  README.md
src/: dc_structs.rs  errors.rs  main.rs  meow.rs  structs.rs
