[package]
name = "discord-data-package-analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
csv = "1.3.0"
regex = { version = "1.10.4", features = ["std", "perf"] }
serde = { version = "1.0.202", features = ["serde_derive"] }
serde_json = "1.0.117"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
